# PyGlow

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
docs/: index.rst
docs/source/: conf.py  gettingstarted.rst  index.rst  installation.rst  jupyternotebooks.rst  license.rst  template.py  userguide.rst  whatsnew.rst
docs/source/examples/: Analysing_dynamics_HS_Criterion.ipynb  Analysing_dynamics_HS_Criterion_SGD.ipynb  Custom_criterion_class.ipynb  HSIC_Network_training_without_backprop.ipynb  MNIST_data_classifier_example.ipynb
glow/: __init__.py  activations.py  coordinates.py  dynamics.py  estimators.py  hash_functions.py  layer.py  losses.py  metrics.py  tensor_numpy_adapter.py
glow/Information_bottelneck/: __init__.py  estimator.py
glow/architechures/DenseNet/: __init__.py  dense_block.py  transition_layer.py
glow/datasets/: __init__.py  cifar10.py
glow/information_bottelneck/: __init__.py  estimator.py
glow/information_bottleneck/: __init__.py  estimator.py
glow/layers/: __init__.py  convolutional.py  core.py  dense.py  hsic_output.py  linear.py  normalization.py  pooling.py
glow/models/: __init__.py  encoder.py  hsic.py  network.py
glow/preprocessing/: data_generator.py
glow/utils/: __init__.py  estimators.py  hash_functions.py  hsic_utils.py  losses.py  optimizers.py
src/glow/: __init__.py  coordinates.py  tensor_numpy_adapter.py
src/glow/Information_bottelneck/: __init__.py  estimator.py  estimators.py
src/glow/datasets/: cifar10.py  mnist.py
src/glow/layers/: __init__.py  convolutional.py  core.py  dense.py  (+4 more)
(+14 files in other folders)
