[metadata]
name = PyGlow
version = 0.0.2
author = Bhavya Bhatt
author_email = bhavyabhatt17@gmail.com
license = MIT
description = Python Package for Keras like API on PyTorch backend
keywords =
    Machine Learning
    Deep Learning
# url = https://einsteinpy.org/
download_url = https://github.com/spino17/PyGlow
long_description = file: README.md
classifiers =
        Development Status :: 4 - Beta
        Intended Audience :: Education
        Intended Audience :: Science/Research
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Topic :: Scientific/Engineering
        Topic :: Scientific/Engineering :: Machine Learning

[options]
package_dir =
    = src
packages = find:
zip_safe = False
install_requires =
        numpy
        torch
        torchvision
include_package_data = True
python_requires = >=3.5

[options.packages.find]
where = src

[options.extras_require]
dev =
        black
        pytest
        pytest-xdist
        pytest-cov<2.6.0

[tool:pytest]
norecursedirs =
    .git
    dist
    build
python_files =
    test_*.py
doctest_plus = disabled
addopts = --strict
markers =
    slow
    remote_data
    filterwarnings
    mpl_image_compare
